# gstreamer-qt-docker

./: .gitignore  README.md  build_Cerbero_recipe.md  build_fix_buster.md  build_fix_fedora.md  copy.sh  docker-compose-22-7-rust-unwind.yml  docker-compose-22-7-rust.yml  docker-compose-buster-gst-22.yml  docker-compose-buster-gst-delete_rs_plugins.yml  docker-compose-buster-gst-main.yml  docker-compose-fedora-gst-main-35.yml  docker-compose-fedora-gst-main.yml  docker-compose.yml  install.sh  localconf.cbc  notes.sh
.docker/5.15.8-lts-lgpl-gst-1.22.5/: Dockerfile
.docker/5.15.8-lts-lgpl-gst-1.23.0/: Dockerfile
.docker/5.15.8-lts-lgpl-gst-1.23.0-fedora/: Dockerfile-fedora-faac  Dockerfile-fedora-faac-bootstrap  Dockerfile-fedora-faac-bootstrap-rust-22-7  Dockerfile-fedora-faac-bootstrap-rust-main  Dockerfile-fedora-faac-bootstrap-rust-unwind-22-7
.docker/buster-gst/: Dockerfile-22  Dockerfile-main
.docker/fedora-gst-main/: Dockerfile-rust-bootstrap  Dockerfile-rust-bootstrap-35
faac-aarch64-linux-1.30-so/: faac.pc  faac.recipe  gst-plugins-bad-1.0.recipe
faac-aarch64-linux-1.30-so/lib/faac/: meson.build
faac-aarch64-linux-1.30-so/lib/pkgconfig/: faac.pc
gstreamer-android/: build_gst_so.sh
gstreamer-android/gst-android-build/arm64-v8a/: gstreamer_android.c
nix-cross/: crossShell.nix  howbuild.md
tg/: index.js  nix.md  reg.js  upload.js
